--- a/gabyadmin/style.css
+++ b/gabyadmin/style.css
@@ -2153,7 +2153,8 @@ body {
 }
 
 article, aside, footer, header, nav, section {
-    display: block
+    display: block;
+    position: sticky;
 }
 
 h1 {
