--- a/gabyadmin/style.css
+++ b/gabyadmin/style.css
@@ -5538,11 +5538,21 @@ body.keyboard-focused .dropdown-content li:focus {
 }
 
 .modal.modal-fixed-footer .modal-content {
-    position: absolute;
+    /* position: absolute;
     height: calc(100% - 56px);
     max-height: 100%;
     width: 100%;
-    overflow-y: auto
+    overflow-y: auto */
+    position: relative;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+            background-clip: padding-box;
+    border: 1px solid #999;
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: 6px;
+    outline: 0;
+    -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+            box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
 }
 
 .modal.modal-fixed-footer .modal-footer {
