--- a/gabyadmin/style.css
+++ b/gabyadmin/style.css
@@ -2190,8 +2190,8 @@ a {
 }
 
 a:hover {
-    color: #0d8d2d;
-    background: #0d8d2d;
+    color: #000000;
+    background: #000000;
     box-shadow: 0 0 10px #0d8d2d, 0 0 40px #0d8d2d, 0 0 80px #0d8d2d;
     transition-delay: 1s;
 }
